@@ -95,13 +95,19 @@ get_va_nth (va_list argp, unsigned int n)
 }
 
 static void
-optimize_alloc (int do_realloc, char **p, size_t sz, size_t need_sz, size_t typ_sz)
+optimize_alloc (char **p, char *end, size_t alloc_sz)
 {
+  size_t need_sz;
   char *h;
 
-  if (!do_realloc || sz == need_sz || !p || *p == NULL)
+  if (!p || !*p)
     return;
-  if ((h = (char *) realloc (*p, need_sz * typ_sz)) != NULL)
+
+  need_sz = end - *p;
+  if (need_sz == alloc_sz)
+    return;
+
+  if ((h = (char *) realloc (*p, need_sz)) != NULL)
     *p = h;
 }
 
@@ -619,8 +625,7 @@ __mingw_sformat (_IFP *s, const char *format, va_list argp)
 
 	  if ((flags & IS_SUPPRESSED) == 0)
 	    {
-	      optimize_alloc ((flags & IS_ALLOC_USED) != 0, pstr, str_sz,
-			      (str - *pstr), sizeof (char));
+	      optimize_alloc (pstr, str, str_sz);
 	      pstr = NULL;
 	      ++rval;
 	    }
@@ -717,8 +722,7 @@ __mingw_sformat (_IFP *s, const char *format, va_list argp)
 
 	  if ((flags & IS_SUPPRESSED) == 0)
 	    {
-	      optimize_alloc ((flags & IS_ALLOC_USED) != 0, pstr, str_sz,
-	      		      (wstr - (wchar_t *) *pstr), sizeof (wchar_t));
+	      optimize_alloc (pstr, (char *) wstr, str_sz * sizeof (wchar_t));
 	      pstr = NULL;
 	      ++rval;
 	    }
@@ -796,8 +800,7 @@ __mingw_sformat (_IFP *s, const char *format, va_list argp)
 	  if ((flags & IS_SUPPRESSED) == 0)
 	    {
 	      *str++ = 0;
-	      optimize_alloc ((flags & IS_ALLOC_USED) != 0, pstr, str_sz,
-			      (str - *pstr), sizeof (char));
+	      optimize_alloc (pstr, str, str_sz);
 	      pstr = NULL;
 	      ++rval;
 	    }
@@ -902,8 +905,7 @@ __mingw_sformat (_IFP *s, const char *format, va_list argp)
 	  if ((flags & IS_SUPPRESSED) == 0)
 	    {
 	      *wstr++ = 0;
-	      optimize_alloc ((flags & IS_ALLOC_USED) != 0, pstr, str_sz,
-			      (wstr - (wchar_t *) *pstr), sizeof (wchar_t));
+	      optimize_alloc (pstr, (char *) wstr, str_sz * sizeof (wchar_t));
 	      pstr = NULL;
 	      ++rval;
 	    }
@@ -1508,8 +1510,7 @@ __mingw_sformat (_IFP *s, const char *format, va_list argp)
 	      if ((flags & IS_SUPPRESSED) == 0)
 		{
 		  *wstr++ = 0;
-		  optimize_alloc ((flags & IS_ALLOC_USED) != 0, pstr, str_sz,
-				  (wstr - (wchar_t *) *pstr), sizeof (wchar_t));
+		  optimize_alloc (pstr, (char *) wstr, str_sz * sizeof (wchar_t));
 		  pstr = NULL;
 		  ++rval;
 		}
@@ -1565,8 +1566,7 @@ __mingw_sformat (_IFP *s, const char *format, va_list argp)
 	      if ((flags & IS_SUPPRESSED) == 0)
 		{
 		  *str++ = 0;
-		  optimize_alloc ((flags & IS_ALLOC_USED) != 0, pstr, str_sz,
-		  		  (str - *pstr), sizeof (char));
+		  optimize_alloc (pstr, str, str_sz);
 		  pstr = NULL;
 		  ++rval;
 		}
